# hermes-agent

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LOCAL_CHANGES.md  README.md  cli.py  hermes_constants.py  hermes_state.py  package-lock.json  pyproject.toml  run_agent.py  toolsets.py
.plans/: hermes-switch-ui-plugin.md
acp_registry/: agent.json
agent/: agent_init.py  agent_runtime_helpers.py  curator.py  (+9 more)
plugins/matrix_coder/: README.md  __init__.py  plugin.yaml  pyproject.toml
plugins/matrix_coder/core/: __init__.py  config.py  harness.py  hermes_bridge.py  intake.py  intent_gate.py  kanban_audit.py  models.py  prompts.py  registry.py  reporting.py
plugins/matrix_coder/personas/: _passthrough.md  debug.md  executor.md  explore.md  plan.md  review.md  simplify.md  test.md  verify.md
plugins/matrix_coder/personas/_base/: boundary-table.md  evidence-protocol.md  severity-rubric.md  specialist-contract.md
plugins/matrix_coder/personas/domains/: backend-api.md  data-db.md  frontend.md  infra-cli.md  plugin-skill-authoring.md
plugins/matrix_coder/personas/review-lenses/: api.md  code.md  deps.md  performance.md  quality.md  security.md
plugins/matrix_coder/personas/workflows/: autopilot.md  ralph.md  ultraqa.md  ultrawork.md
plugins/matrix_coder/tests/: conftest.py  test_config.py  test_cron_bypass.py  test_injection_lifecycle.py  test_injection_signal.py  test_intake.py  test_integration_loader.py  test_intent_gate.py  test_kanban_audit.py  test_persona_composition.py  test_plugin_registration.py  test_subagent_bypass.py  test_walking_skeleton.py
(+446 files in other folders)
